--- a/src/documents/themes/yellow-swan/css/base.less
+++ b/src/documents/themes/yellow-swan/css/base.less
@@ -22,7 +22,7 @@ h2, h3, h4 {
 }
 h3 {font-size: 4em;}
 h4 {font-size:3em;}
-p {
+p, li {
   font-size:1.6em;
   line-height:1.6em;
   margin-bottom: 1.4em;
