--- a/src/documents/themes/yellow-swan/css/theme.less
+++ b/src/documents/themes/yellow-swan/css/theme.less
@@ -28,7 +28,7 @@ nav {background: #2b2b2b;}
    HEADER
    ========================================================================== */
 .header {
-  background-image: url('../img/cover.jpg');
+  background-image: url('../img/Coma_Cluster_of_Galaxies.jpg');
   background-color: #2b2b2b;
   background-repeat: no-repeat;
   background-position: center bottom;
