--- a/src/documents/themes/yellow-swan/css/base.less
+++ b/src/documents/themes/yellow-swan/css/base.less
@@ -15,7 +15,7 @@
    BASIC STYLES
    ========================================================================== */
 h2, h3, h4 {
-  font-size: 5em;
+  font-size: 3em;
   font-weight: normal;
   margin-bottom:.4em;
   letter-spacing: -.02em;
@@ -57,7 +57,7 @@ nav {
 }
 .logo-name {
   margin-bottom: 0;
-  font-size: 10em;
+  font-size: 5em;
   letter-spacing: -.04em;
 }
 .tagline {
@@ -285,6 +285,7 @@ nav {
   }
   .call-action-area .call-action-link, .btn {top:0;}
 
+  h1 {font-size: 5em;} 
   h2, h3, h4 {font-size: 3em;}
   h3 {font-size: 2em;}
   h4 {font-size:1.8em;}
